<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:id="@+id/qrCode_info_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_label"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/name_hint"
                android:inputType="text"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_label"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/edit_text_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/age_hint"
                android:inputType="number"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_label"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/edit_text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/phone_hint"
                android:inputType="phone"/>

            <Button
                android:id="@+id/qrGeneratorBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/generate_qr_button"
                android:background="#F5B7B1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/qrCode_result_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:id="@+id/qrImg"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <Button
                    android:id="@+id/save_qr_code"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/baseline_save_alt_black_24dp" />
                <Button
                    android:id="@+id/send_qr_code"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:padding="10dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/baseline_send_black_24dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>